<?xml version="1.0"?>
<package>
  <name>rdc_slam</name>
  <version>3.0.0</version>
  <description>rdc_slam</description>

  <maintainer email="xieyt8@mail2.sysu.edu.cn">Yuting Xie</maintainer>

  <license>BSD</license>

  <author >Yuting Xie</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>ros_bridge</build_depend>
  <run_depend>ros_bridge</run_depend>
  
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>
  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>

  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>cloud_msgs</build_depend>
  <run_depend>cloud_msgs</run_depend>
  <build_depend>sensors_msgs</build_depend>
  <run_depend>sensors_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>

  <build_depend>message_generation</build_depend>

  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>
  
  <build_depend>gtsam</build_depend>
  <run_depend>gtsam</run_depend>

  <build_depend>distributed_mapper</build_depend>
  <run_depend>distributed_mapper</run_depend>

</package>
