<?xml version="1.0"?>
<package>
  <name>ping_msg</name>
  <version>1.0.0</version>
  <description>ping_msg</description>

  <maintainer email="xxx@xxx.xxx">Yuting Xie</maintainer>

  <license>BSD</license>

  <author >Yuting Xie</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>ros_bridge</build_depend>
  <run_depend>ros_bridge</run_depend>
  
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <run_depend>message_runtime</run_depend>
  <build_depend>message_generation</build_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
</package>
